<resources>
    <string translatable="false"  name="game_services_project_id"> 216836792617 </string>
    <string translatable="false"  name="ad_ingame">ca-app-pub-5055222969608898/6358518733</string>
    <string translatable="false"  name="ad_test">ca-app-pub-3940256099942544/5224354917</string>
    <string translatable="false"  name="ad_release">ca-app-pub-5055222969608898/6358518733</string>
    <string translatable="false"  name="leaderboardsID">CgkIqcLr46cGEAIQAA</string>
    <string name="app_name">MathFighter</string>
    <string name="start_game">Start Game</string>
    <string name="character_button">Character</string>
    <string name="shop_button">Shop</string>
    <string name="setting_button">Settings</string>
    <string name="achievement_button">Achievement</string>
    <string name="leaderboards_button">Leaderboard</string>
    <string name="test" translatable="false">00000000</string>
    <string name="health_50">Health+50</string>
    <string name="buy">Buy</string>
    <string name="scores_text">Scores +10%</string>
    <string name="time_text">Time +5s</string>
    <string name="coin_text">Coins +10%</string>
    <string name="revive_text">Revive +1</string>
    <string name="sound_on_off">Sound On/Off</string>
    <string name="music_on_off">Music On/Off</string>
    <string name="back_to_menu">Back to menu</string>
    <string name="price">price</string>
    <string name="free_coin">100 coins</string>
    <string name="ad">Watch AD</string>
    <string name="watch">Watch</string>
    <string name="coins1">1000 Coins</string>
    <string name="coins1price" translatable="false">0.99 USD</string>
    <string name="coins2">2000 Coins</string>
    <string name="coins2price" translatable="false">1.79 USD</string>
    <string name="coins3">4000 Coins</string>
    <string name="coins3price" translatable="false">3.49 USD</string>
    <string name="no_ad">Remove AD</string>
    <string name="no_ad_price" translatable="false">9.99 USD</string>
    <string name="shop_max">Max</string>
    <string name="formula" translatable="false">*</string>
    <string name="answer_text" translatable="false">Answer</string>
    <string name="_1" translatable="false">1</string>
    <string name="_2" translatable="false">2</string>
    <string name="_3" translatable="false">3</string>
    <string name="_4" translatable="false">4</string>
    <string name="_5" translatable="false">5</string>
    <string name="_6" translatable="false">6</string>
    <string name="_7" translatable="false">7</string>
    <string name="_8" translatable="false">8</string>
    <string name="_9" translatable="false">9</string>
    <string name="_0" translatable="false">0</string>
    <string name="health">Health </string>
    <string name="timer" translatable="false">timer</string>
    <string name="timer_sec">sec</string>
    <string name="wrong">Wrong, correct answer is : </string>
    <string name="aEmpty">Answer cannot be empty</string>
    <string name="score_0">Score : </string>
    <string name="ad_rev_string">Game is not over.</string>
    <string name="ad_rev_string2">Do you want to be resurrected?</string>
    <string name="go_score_text">You earned x score</string>
    <string name="go_reward_text">"Your reward is: "</string>
    <string name="go_to_main_menu">Go to main menu</string>
    <string name="go_scores_1">You earned </string>
    <string name="go_scores_2">scores</string>
    <string name="go_reward">Your reward is: </string>
    <string name="go_string">Game over</string>
    <string name="health_100_100">Health 100/100</string>
    <string name="score_00">Score : 0</string>
    <string name="_0000000" translatable="false">0000000</string>
    <string name="pause_string">Pause</string>
    <string name="cont">Continue</string>
    <string name="title_activity_game_over">GameOver</string>
    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="you_earned_reward">You earned reward</string>
    <string name="coins">Coins</string>
    <string name="pause">Pause</string>
    <string name="created" translatable="false">Created by Mag1ka in 2023 (C)</string>
    <string name="tag_achiev">Your Achievements</string>
    <string name="send_answer">Send answer</string>
    <string name="backspace">Backspace</string>
    <string name="music_volume">Music Volume</string>
    <string name="sound_volume">Sound Volume</string>
    <string name="buy1000">Buy 1000 coins</string>
    <string name="buy2000">Buy 2000 coins</string>
    <string name="buy4000">Buy 4000 coins</string>
    <string name="buy_no_ad">Buy ad remover </string>
    <string name="health_upgrade">Bonus health upgrade</string>
    <string name="score_upgrade">Bonus score upgrade</string>
    <string name="time_upgrade">Bonus time upgrade</string>
    <string name="gold_upgrade">Bonus coins upgrade</string>
    <string name="revive_upgrade">Bonus revive upgrade</string>
    <string name="sign_warning">Available only if you signed.</string>
    <string name="asd" translatable="false">ca-app-pub-3940256099942544/5224354917</string>
    <string name="ad_double_text">Wonna double coins for AD?</string>
    <string name="ad_double_watch_button">Watch Ad</string>
    <string name="ad_already_bought">You already bought it!</string>
    <string name="sign_todo">Will be avaible soon in next updates!</string>
    <string name="res_done">Got resurrected!</string>
    <string name="purchased">Done!</string>
    <string name="ad_load">In your region has no ad</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
</resources>