<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context=".view.MainActivity">

    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/text_name"
        android:layout_width="match_parent"
        android:layout_height="83dp"
        android:layout_marginTop="30sp"
        android:fontFamily="@font/fifaks"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="#76FF03"
        android:textSize="60sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:reflectionColor="#E91E63" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/start_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="15sp"
        android:background="#673AB7"
        android:fontFamily="@font/fifaks"
        android:padding="10sp"
        android:text="@string/start_game"
        android:textColor="#F48FB1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/character_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="15sp"
        android:background="#673AB7"
        android:fontFamily="@font/fifaks"
        android:padding="10sp"
        android:text="@string/character_button"
        android:textColor="#F48FB1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/start_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/shop_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="15sp"
        android:background="#673AB7"
        android:fontFamily="@font/fifaks"
        android:padding="10sp"
        android:text="@string/shop_button"
        android:textColor="#F48FB1"
        android:textSize="30sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/setting_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="15sp"
        android:background="#673AB7"
        android:fontFamily="@font/fifaks"
        android:padding="10sp"
        android:text="@string/setting_button"
        android:textColor="#F48FB1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_name" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/achievement_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="15sp"
        android:background="#673AB7"
        android:fontFamily="@font/fifaks"
        android:padding="10sp"
        android:text="@string/achievement_button"
        android:textColor="#F48FB1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/setting_button" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/leaderboards_button"
        android:layout_width="@dimen/button_width"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40sp"
        android:layout_marginVertical="15sp"
        android:background="#673AB7"
        android:fontFamily="@font/fifaks"
        android:padding="10sp"
        android:text="@string/leaderboards_button"
        android:textColor="#F48FB1"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/character_button" />


</androidx.constraintlayout.widget.ConstraintLayout>