<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".view.fragments.Pause">
    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/pause_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/fifaks"
        android:text="@string/pause_string"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:reflectionColor="#E91E63"
        android:textColor="@color/test3"/>

    <com.romainpiel.shimmer.ShimmerButton
        android:id="@+id/cont"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_but"
        android:fontFamily="@font/fifaks"
        android:text="@string/cont"
        android:textColor="@color/test3"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:reflectionColor="#E91E63"
        android:clickable="true"
        android:focusable="true"/>
    <com.romainpiel.shimmer.ShimmerButton
        android:id="@+id/quit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_but"
        android:fontFamily="@font/fifaks"
        android:text="@string/go_to_main_menu"
        android:textColor="@color/test3"
        android:textSize="30sp"
        app:layout_constraintTop_toBottomOf="@+id/cont"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:reflectionColor="#E91E63"
        android:clickable="true"
        android:focusable="true" />

</androidx.constraintlayout.widget.ConstraintLayout>