<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background2"
    tools:context=".view.GameOver">
    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/go_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/fifaks"
        android:text="@string/go_string"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:textAlignment="center"
        android:textSize="30sp"
        app:reflectionColor="#E91E63"
        android:textColor="#76FF03"/>

    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/go_reward"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10sp"
        android:fontFamily="@font/fifaks"
        android:text="@string/you_earned_reward"
        android:textAlignment="center"
        android:textColor="#76FF03"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_text"
        app:reflectionColor="#E91E63" />

    <ImageView
        android:layout_width="30sp"
        android:layout_height="30sp"
        android:src="@drawable/coin"
        app:layout_constraintBottom_toBottomOf="@+id/go_reward"
        app:layout_constraintLeft_toRightOf="@id/go_reward"
        app:layout_constraintTop_toTopOf="@id/go_reward"
        android:contentDescription="@string/coins"/>
    <com.romainpiel.shimmer.ShimmerTextView
        android:id="@+id/go_score"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/fifaks"
        android:text="@string/go_score_text"
        android:textAlignment="center"
        android:textColor="#76FF03"
        app:reflectionColor="#E91E63"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/go_reward"
        android:layout_marginTop="10sp"/>
    <pl.droidsonroids.gif.GifImageView
        android:id="@+id/char_death2"
        android:layout_width="150sp"
        android:layout_height="150sp"
        android:src="@drawable/h_death"
        app:layout_constraintLeft_toRightOf="@id/gl1"
        app:layout_constraintRight_toLeftOf="@id/gl2"
        app:layout_constraintBottom_toTopOf="@id/gl3"
        />
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.3"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.7"/>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.75"/>
    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.50"/>

    <com.romainpiel.shimmer.ShimmerButton
        android:id="@+id/go_butt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/round_but"
        android:fontFamily="@font/fifaks"
        android:text="@string/go_to_main_menu"
        android:textColor="#76FF03"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl2"
        app:layout_constraintStart_toStartOf="@+id/gl1"
        app:layout_constraintTop_toBottomOf="@+id/char_death2"
        app:reflectionColor="#E91E63"/>

</androidx.constraintlayout.widget.ConstraintLayout>